# propli

./: README.md  pyproject.toml
src/propli/: cli.py  exceptions.py  file.py
src/propli/file_types/: __init__.py  abc.py  json.py  plist.py  yaml.py
src/yamlist/: main.py
tests/: test_cli.py  test_file.py
