[tool.poetry]
name = "yamlist"
version = "0.1.0"
description = "Convert between plist and yaml formats"
authors = ["Trenten Oliver <trenteno@wepay.com>"]
readme = "README.md"
packages = [{include = "yamlist", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
typer = {version = "^0.7.0", extras = ["all"]}

[tool.poetry.scripts]
yamlist = "yamlist.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
